#Enforce the highest possible version that the current Ubuntu LTS provides
#by default. We want to be sure to have the ability to attach as many things
#to the target as modern cmake code affords us
cmake_minimum_required(VERSION 3.16 FATAL_ERROR)
add_definitions(-DTOOLS_ENABLED)
add_definitions(-DDEBUG_ENABLED)
add_definitions(-DGODOT_MODULE)
add_definitions(-DCLIPPER2_ENABLED)
add_definitions(-DKHRONOS_STATIC)
add_definitions(-DPCRE2_STATIC)
add_definitions(-DTVG_STATIC)
add_definitions(-DU_STATIC_IMPLEMENTATION)
add_definitions(-DU_HAVE_LIB_SUFFIX=1)
add_definitions(-DU_LIB_SUFFIX_C_NAME=_godot)
add_definitions(-DICU_STATIC_DATA)

set(GODOT_SOURCE_MODULES_DIR ${GODOT_ENGINE_ROOT_DIRECTORY}/modules)

file(GLOB  MODULES_SOURCE "${GODOT_SOURCE_MODULES_DIR}/*.cpp" "${GODOT_SOURCE_MODULES_DIR}/*.h")
file(GLOB  ASTCENC_MODULES_SOURCE "${GODOT_SOURCE_MODULES_DIR}/astcenc/*.cpp" "${GODOT_SOURCE_MODULES_DIR}/astcenc/*.h")
file(GLOB  BASIS_UNIVERSAL_MODULES_SOURCE "${GODOT_SOURCE_MODULES_DIR}/basis_universal/*.cpp" "${GODOT_SOURCE_MODULES_DIR}/basis_universal/*.h")
file(GLOB  BCDEC_MODULES_SOURCE "${GODOT_SOURCE_MODULES_DIR}/bcdec/*.cpp" "${GODOT_SOURCE_MODULES_DIR}/bcdec/*.h")
file(GLOB  BETSY_MODULES_SOURCE "${GODOT_SOURCE_MODULES_DIR}/betsy/*.cpp" "${GODOT_SOURCE_MODULES_DIR}/betsy/*.h")
file(GLOB  BMP_MODULES_SOURCE "${GODOT_SOURCE_MODULES_DIR}/bmp/*.cpp" "${GODOT_SOURCE_MODULES_DIR}/bmp/*.h")
file(GLOB  CAMERA_MODULES_SOURCE "${GODOT_SOURCE_MODULES_DIR}/camera/camera_win.cpp" "${GODOT_SOURCE_MODULES_DIR}/camera/register_types.cpp")
file(GLOB  CSG_MODULES_SOURCE
    "${GODOT_SOURCE_MODULES_DIR}/csg/*.cpp"
	"${GODOT_SOURCE_MODULES_DIR}/csg/*.h"
    "${GODOT_SOURCE_MODULES_DIR}/csg/editor/*.cpp"
	"${GODOT_SOURCE_MODULES_DIR}/csg/editor/*.h"
	)
file(GLOB  CVTT_MODULES_SOURCE "${GODOT_SOURCE_MODULES_DIR}/cvtt/*.cpp" "${GODOT_SOURCE_MODULES_DIR}/cvtt/*.h")
file(GLOB  DDS_MODULES_SOURCE "${GODOT_SOURCE_MODULES_DIR}/dds/*.cpp" "${GODOT_SOURCE_MODULES_DIR}/dds/*.h")
file(GLOB  ENET_MODULES_SOURCE "${GODOT_SOURCE_MODULES_DIR}/enet/*.cpp" "${GODOT_SOURCE_MODULES_DIR}/enet/*.h")
file(GLOB  ETCPAK_MODULES_SOURCE "${GODOT_SOURCE_MODULES_DIR}/etcpak/*.cpp" "${GODOT_SOURCE_MODULES_DIR}/etcpak/*.h")
file(GLOB  FBX_MODULES_SOURCE
    "${GODOT_SOURCE_MODULES_DIR}/fbx/*.cpp" 
	"${GODOT_SOURCE_MODULES_DIR}/fbx/*.h"
	"${GODOT_SOURCE_MODULES_DIR}/fbx/editor/*.cpp" 
	"${GODOT_SOURCE_MODULES_DIR}/fbx/editor/*.h"
	)
file(GLOB  FREETYPE_MODULES_SOURCE "${GODOT_SOURCE_MODULES_DIR}/freetype/*.cpp" "${GODOT_SOURCE_MODULES_DIR}/freetype/*.h")
file(GLOB  GDSCRIPT_MODULES_SOURCE 
    "${GODOT_SOURCE_MODULES_DIR}/gdscript/*.cpp"
	"${GODOT_SOURCE_MODULES_DIR}/gdscript/*.h"
	"${GODOT_SOURCE_MODULES_DIR}/gdscript/editor/*.cpp"
	"${GODOT_SOURCE_MODULES_DIR}/gdscript/editor/*.h"
	"${GODOT_SOURCE_MODULES_DIR}/gdscript/language_server/*.cpp"
	"${GODOT_SOURCE_MODULES_DIR}/gdscript/language_server/*.h"
	)
file(GLOB  GLSLANG_MODULES_SOURCE "${GODOT_SOURCE_MODULES_DIR}/glslang/*.cpp" "${GODOT_SOURCE_MODULES_DIR}/glslang/*.h")
file(GLOB  GLTF_MODULES_SOURCE
    "${GODOT_SOURCE_MODULES_DIR}/gltf/*.cpp" 
	"${GODOT_SOURCE_MODULES_DIR}/gltf/*.h"
	"${GODOT_SOURCE_MODULES_DIR}/gltf/structures/*.cpp" 
	"${GODOT_SOURCE_MODULES_DIR}/gltf/structures/*.h"
	"${GODOT_SOURCE_MODULES_DIR}/gltf/extensions/*.cpp" 
	"${GODOT_SOURCE_MODULES_DIR}/gltf/extensions/*.h"
	"${GODOT_SOURCE_MODULES_DIR}/gltf/extensions/physics/*.cpp" 
	"${GODOT_SOURCE_MODULES_DIR}/gltf/extensions/physics/*.h"
	"${GODOT_SOURCE_MODULES_DIR}/gltf/editor/*.cpp" 
	"${GODOT_SOURCE_MODULES_DIR}/gltf/editor/*.h"
	)
file(GLOB  GODOT_PHYSICS_2D_MODULES_SOURCE "${GODOT_SOURCE_MODULES_DIR}/godot_physics_2d/*.cpp" "${GODOT_SOURCE_MODULES_DIR}/godot_physics_2d/*.h")
file(GLOB  GODOT_PHYSICS_3D_MODULES_SOURCE
    "${GODOT_SOURCE_MODULES_DIR}/godot_physics_3d/*.cpp" 
	"${GODOT_SOURCE_MODULES_DIR}/godot_physics_3d/*.h"
	"${GODOT_SOURCE_MODULES_DIR}/godot_physics_3d/joints/*.cpp" 
	"${GODOT_SOURCE_MODULES_DIR}/godot_physics_3d/joints/*.h"
	)
file(GLOB  GRIDMAP_MODULES_SOURCE
    "${GODOT_SOURCE_MODULES_DIR}/gridmap/*.cpp"
	"${GODOT_SOURCE_MODULES_DIR}/gridmap/*.h"
	"${GODOT_SOURCE_MODULES_DIR}/gridmap/editor/*.cpp"
	"${GODOT_SOURCE_MODULES_DIR}/gridmap/editor/*.h"
	)
file(GLOB  HDR_MODULES_SOURCE "${GODOT_SOURCE_MODULES_DIR}/hdr/*.cpp" "${GODOT_SOURCE_MODULES_DIR}/hdr/*.h")
file(GLOB  INTERACTIVE_MUSIC_MODULES_SOURCE
    "${GODOT_SOURCE_MODULES_DIR}/interactive_music/*.cpp" 
	"${GODOT_SOURCE_MODULES_DIR}/interactive_music/*.h"
	"${GODOT_SOURCE_MODULES_DIR}/interactive_music/editor/*.cpp" 
	"${GODOT_SOURCE_MODULES_DIR}/interactive_music/editor/*.h"
	)
file(GLOB  JOLT_PHYSICS_MODULES_SOURCE 
    "${GODOT_SOURCE_MODULES_DIR}/jolt_physics/*.cpp"
	"${GODOT_SOURCE_MODULES_DIR}/jolt_physics/*.h"
	"${GODOT_SOURCE_MODULES_DIR}/jolt_physics/joints/*.h"
	"${GODOT_SOURCE_MODULES_DIR}/jolt_physics/joints/*.cpp"
	"${GODOT_SOURCE_MODULES_DIR}/jolt_physics/misc/*.h"
	"${GODOT_SOURCE_MODULES_DIR}/jolt_physics/misc/*.cpp"
	"${GODOT_SOURCE_MODULES_DIR}/jolt_physics/objects/*.h"
	"${GODOT_SOURCE_MODULES_DIR}/jolt_physics/objects/*.cpp"
	"${GODOT_SOURCE_MODULES_DIR}/jolt_physics/shapes/*.h"
	"${GODOT_SOURCE_MODULES_DIR}/jolt_physics/shapes/*.cpp"
	"${GODOT_SOURCE_MODULES_DIR}/jolt_physics/spaces/*.h"
	"${GODOT_SOURCE_MODULES_DIR}/jolt_physics/spaces/*.cpp"
	)
file(GLOB  JPG_MODULES_SOURCE "${GODOT_SOURCE_MODULES_DIR}/jpg/*.cpp" "${GODOT_SOURCE_MODULES_DIR}/jpg/*.h")
file(GLOB  JSONRPC_MODULES_SOURCE "${GODOT_SOURCE_MODULES_DIR}/jsonrpc/*.cpp" "${GODOT_SOURCE_MODULES_DIR}/jsonrpc/*.h")
file(GLOB  KTX_MODULES_SOURCE "${GODOT_SOURCE_MODULES_DIR}/ktx/*.cpp" "${GODOT_SOURCE_MODULES_DIR}/ktx/*.h")

file(GLOB  LIGHTMAPPER_RD_MODULES_SOURCE "${GODOT_SOURCE_MODULES_DIR}/lightmapper_rd/*.cpp" "${GODOT_SOURCE_MODULES_DIR}/lightmapper_rd/*.h")
file(GLOB  MESHOPTIMIZER_MODULES_SOURCE "${GODOT_SOURCE_MODULES_DIR}/meshoptimizer/*.cpp" "${GODOT_SOURCE_MODULES_DIR}/meshoptimizer/*.h")
file(GLOB  MINIMP3_MODULES_SOURCE "${GODOT_SOURCE_MODULES_DIR}/minimp3/*.cpp" "${GODOT_SOURCE_MODULES_DIR}/minimp3/*.h")
file(GLOB  MOBILE_VR_MODULES_SOURCE "${GODOT_SOURCE_MODULES_DIR}/mobile_vr/*.cpp" "${GODOT_SOURCE_MODULES_DIR}/mobile_vr/*.h")
file(GLOB  MONO_MODULES_SOURCE
    "${GODOT_SOURCE_MODULES_DIR}/mono/*.cpp" 
	"${GODOT_SOURCE_MODULES_DIR}/mono/*.h"
	"${GODOT_SOURCE_MODULES_DIR}/mono/editor/*.cpp" 
	"${GODOT_SOURCE_MODULES_DIR}/mono/editor/*.h"
	"${GODOT_SOURCE_MODULES_DIR}/mono/mono_gd/*.cpp" 
	"${GODOT_SOURCE_MODULES_DIR}/mono/mono_gd/*.h"
	"${GODOT_SOURCE_MODULES_DIR}/mono/utils/*.cpp" 
	"${GODOT_SOURCE_MODULES_DIR}/mono/utils/*.h"
	"${GODOT_SOURCE_MODULES_DIR}/mono/*.cpp" 
	"${GODOT_SOURCE_MODULES_DIR}/mono/*.h"
	"${GODOT_SOURCE_MODULES_DIR}/mono/*.cpp" 
	"${GODOT_SOURCE_MODULES_DIR}/mono/*.h"
	)
file(GLOB  MSDFGEN_MODULES_SOURCE "${GODOT_SOURCE_MODULES_DIR}/msdfgen/*.cpp" "${GODOT_SOURCE_MODULES_DIR}/msdfgen/*.h")
file(GLOB  MULTIPLAYER_MODULES_SOURCE
    "${GODOT_SOURCE_MODULES_DIR}/multiplayer/*.cpp" 
	"${GODOT_SOURCE_MODULES_DIR}/multiplayer/*.h"
	"${GODOT_SOURCE_MODULES_DIR}/multiplayer/editor/*.cpp" 
	"${GODOT_SOURCE_MODULES_DIR}/multiplayer/editor/*.h"
	)
file(GLOB  NAVIGATION_MODULES_SOURCE
    "${GODOT_SOURCE_MODULES_DIR}/navigation/*.cpp" 
	"${GODOT_SOURCE_MODULES_DIR}/navigation/*.h"
	"${GODOT_SOURCE_MODULES_DIR}/navigation/2d/*.cpp" 
	"${GODOT_SOURCE_MODULES_DIR}/navigation/2d/*.h"
	"${GODOT_SOURCE_MODULES_DIR}/navigation/3d/*.cpp" 
	"${GODOT_SOURCE_MODULES_DIR}/navigation/3d/*.h"
	"${GODOT_SOURCE_MODULES_DIR}/navigation/editor/*.cpp" 
	"${GODOT_SOURCE_MODULES_DIR}/navigation/editor/*.h"
	)
file(GLOB  NOISE_MODULES_SOURCE
    "${GODOT_SOURCE_MODULES_DIR}/noise/*.cpp" 
	"${GODOT_SOURCE_MODULES_DIR}/noise/*.h"
	"${GODOT_SOURCE_MODULES_DIR}/noise/editor/*.cpp" 
	"${GODOT_SOURCE_MODULES_DIR}/noise/editor/*.h"
	)
file(GLOB  OGG_MODULES_SOURCE "${GODOT_SOURCE_MODULES_DIR}/ogg/*.cpp" "${GODOT_SOURCE_MODULES_DIR}/ogg/*.h")
file(GLOB  MBEDTLS_MODULES_SOURCE "${GODOT_SOURCE_MODULES_DIR}/mbedtls/*.cpp" "${GODOT_SOURCE_MODULES_DIR}/mbedtls/*.h")
file(GLOB  OPENXR_MODULES_SOURCE
    "${GODOT_SOURCE_MODULES_DIR}/openxr/*.cpp" 
	"${GODOT_SOURCE_MODULES_DIR}/openxr/*.h"
	"${GODOT_SOURCE_MODULES_DIR}/openxr/action_map/*.cpp" 
	"${GODOT_SOURCE_MODULES_DIR}/openxr/action_map/*.h"
	"${GODOT_SOURCE_MODULES_DIR}/openxr/editor/*.cpp" 
	"${GODOT_SOURCE_MODULES_DIR}/openxr/editor/*.h"
	"${GODOT_SOURCE_MODULES_DIR}/openxr/extensions/*.cpp" 
	"${GODOT_SOURCE_MODULES_DIR}/openxr/extensions/*.h"
	"${GODOT_SOURCE_MODULES_DIR}/openxr/scene/*.cpp" 
	"${GODOT_SOURCE_MODULES_DIR}/openxr/scene/*.h"
	)
file(GLOB  RAYCAST_MODULES_SOURCE "${GODOT_SOURCE_MODULES_DIR}/raycast/*.cpp" "${GODOT_SOURCE_MODULES_DIR}/raycast/*.h")
file(GLOB  REGEX_MODULES_SOURCE "${GODOT_SOURCE_MODULES_DIR}/regex/*.cpp" "${GODOT_SOURCE_MODULES_DIR}/regex/*.h")
file(GLOB  SVG_MODULES_SOURCE "${GODOT_SOURCE_MODULES_DIR}/svg/*.cpp" "${GODOT_SOURCE_MODULES_DIR}/svg/*.h")
file(GLOB  TEXT_SERVER_ADV_MODULES_SOURCE "${GODOT_SOURCE_MODULES_DIR}/text_server_adv/*.cpp" "${GODOT_SOURCE_MODULES_DIR}/text_server_adv/*.h")
#file(GLOB  TEXT_SERVER_FB_MODULES_SOURCE "${GODOT_SOURCE_MODULES_DIR}/text_server_fb/*.cpp" "${GODOT_SOURCE_MODULES_DIR}/text_server_fb/*.h")
file(GLOB  TGA_MODULES_SOURCE "${GODOT_SOURCE_MODULES_DIR}/tga/*.cpp" "${GODOT_SOURCE_MODULES_DIR}/tga/*.h")
file(GLOB  THEORA_MODULES_SOURCE "${GODOT_SOURCE_MODULES_DIR}/theora/*.cpp" "${GODOT_SOURCE_MODULES_DIR}/theora/*.h")
file(GLOB  TINYEXR_MODULES_SOURCE "${GODOT_SOURCE_MODULES_DIR}/tinyexr/*.cpp" "${GODOT_SOURCE_MODULES_DIR}/tinyexr/*.h")
file(GLOB  UPNP_MODULES_SOURCE "${GODOT_SOURCE_MODULES_DIR}/upnp/*.cpp" "${GODOT_SOURCE_MODULES_DIR}/upnp/*.h")
file(GLOB  VHACD_MODULES_SOURCE "${GODOT_SOURCE_MODULES_DIR}/vhacd/*.cpp" "${GODOT_SOURCE_MODULES_DIR}/vhacd/*.h")
file(GLOB  VORBIS_MODULES_SOURCE "${GODOT_SOURCE_MODULES_DIR}/vorbis/*.cpp" "${GODOT_SOURCE_MODULES_DIR}/vorbis/*.h")
file(GLOB  WEBP_MODULES_SOURCE "${GODOT_SOURCE_MODULES_DIR}/webp/*.cpp" "${GODOT_SOURCE_MODULES_DIR}/webp/*.h")
file(GLOB  WEBRTC_MODULES_SOURCE "${GODOT_SOURCE_MODULES_DIR}/webrtc/*.cpp" "${GODOT_SOURCE_MODULES_DIR}/webrtc/*.h")
file(GLOB  WEBSOCKET_MODULES_SOURCE 
    "${GODOT_SOURCE_MODULES_DIR}/websocket/*.cpp" 
	"${GODOT_SOURCE_MODULES_DIR}/websocket/*.h"
	"${GODOT_SOURCE_MODULES_DIR}/websocket/editor/*.cpp" 
	"${GODOT_SOURCE_MODULES_DIR}/websocket/editor/*.h"
	)
file(GLOB  WEBXR_MODULES_SOURCE "${GODOT_SOURCE_MODULES_DIR}/webxr/*.cpp" "${GODOT_SOURCE_MODULES_DIR}/webxr/*.h")
file(GLOB  XATLAS_UNWRAP_MODULES_SOURCE "${GODOT_SOURCE_MODULES_DIR}/xatlas_unwrap/*.cpp" "${GODOT_SOURCE_MODULES_DIR}/xatlas_unwrap/*.h")
file(GLOB  ZIP_UNWRAP_MODULES_SOURCE "${GODOT_SOURCE_MODULES_DIR}/zip/*.cpp" "${GODOT_SOURCE_MODULES_DIR}/zip/*.h")





list(APPEND MODULES_SOURCE ${ASTCENC_MODULES_SOURCE})
list(APPEND MODULES_SOURCE ${BASIS_UNIVERSAL_MODULES_SOURCE})
list(APPEND MODULES_SOURCE ${BCDEC_MODULES_SOURCE})
list(APPEND MODULES_SOURCE ${BETSY_MODULES_SOURCE})
list(APPEND MODULES_SOURCE ${BMP_MODULES_SOURCE})
list(APPEND MODULES_SOURCE ${CAMERA_MODULES_SOURCE})
list(APPEND MODULES_SOURCE ${CSG_MODULES_SOURCE})
list(APPEND MODULES_SOURCE ${CVTT_MODULES_SOURCE})
list(APPEND MODULES_SOURCE ${DDS_MODULES_SOURCE})
list(APPEND MODULES_SOURCE ${ENET_MODULES_SOURCE})
list(APPEND MODULES_SOURCE ${ETCPAK_MODULES_SOURCE})

list(APPEND MODULES_SOURCE ${FBX_MODULES_SOURCE})
list(APPEND MODULES_SOURCE ${FREETYPE_MODULES_SOURCE})
list(APPEND MODULES_SOURCE ${GDSCRIPT_MODULES_SOURCE})
list(APPEND MODULES_SOURCE ${GLSLANG_MODULES_SOURCE})
list(APPEND MODULES_SOURCE ${GLTF_MODULES_SOURCE})
list(APPEND MODULES_SOURCE ${GODOT_PHYSICS_2D_MODULES_SOURCE})
list(APPEND MODULES_SOURCE ${GODOT_PHYSICS_3D_MODULES_SOURCE})
list(APPEND MODULES_SOURCE ${GRIDMAP_MODULES_SOURCE})
list(APPEND MODULES_SOURCE ${HDR_MODULES_SOURCE})
list(APPEND MODULES_SOURCE ${INTERACTIVE_MUSIC_MODULES_SOURCE})
list(APPEND MODULES_SOURCE ${JOLT_PHYSICS_MODULES_SOURCE})
list(APPEND MODULES_SOURCE ${JPG_MODULES_SOURCE})
list(APPEND MODULES_SOURCE ${JSONRPC_MODULES_SOURCE})
list(APPEND MODULES_SOURCE ${KTX_MODULES_SOURCE})
list(APPEND MODULES_SOURCE ${LIGHTMAPPER_RD_MODULES_SOURCE})
list(APPEND MODULES_SOURCE ${MESHOPTIMIZER_MODULES_SOURCE})
list(APPEND MODULES_SOURCE ${MINIMP3_MODULES_SOURCE})
list(APPEND MODULES_SOURCE ${MOBILE_VR_MODULES_SOURCE})
#list(APPEND MODULES_SOURCE ${MONO_MODULES_SOURCE})
list(APPEND MODULES_SOURCE ${MSDFGEN_MODULES_SOURCE})
list(APPEND MODULES_SOURCE ${MULTIPLAYER_MODULES_SOURCE})
list(APPEND MODULES_SOURCE ${NAVIGATION_MODULES_SOURCE})
list(APPEND MODULES_SOURCE ${NOISE_MODULES_SOURCE})
list(APPEND MODULES_SOURCE ${OGG_MODULES_SOURCE})
list(APPEND MODULES_SOURCE ${MBEDTLS_MODULES_SOURCE})
list(APPEND MODULES_SOURCE ${OPENXR_MODULES_SOURCE})
list(APPEND MODULES_SOURCE ${RAYCAST_MODULES_SOURCE})
list(APPEND MODULES_SOURCE ${REGEX_MODULES_SOURCE})
list(APPEND MODULES_SOURCE ${SVG_MODULES_SOURCE})
list(APPEND MODULES_SOURCE ${TEXT_SERVER_ADV_MODULES_SOURCE})
#list(APPEND MODULES_SOURCE ${TEXT_SERVER_FB_MODULES_SOURCE})
list(APPEND MODULES_SOURCE ${TGA_MODULES_SOURCE})
list(APPEND MODULES_SOURCE ${THEORA_MODULES_SOURCE})
list(APPEND MODULES_SOURCE ${TINYEXR_MODULES_SOURCE})
list(APPEND MODULES_SOURCE ${UPNP_MODULES_SOURCE})
list(APPEND MODULES_SOURCE ${VHACD_MODULES_SOURCE})
list(APPEND MODULES_SOURCE ${VORBIS_MODULES_SOURCE})
list(APPEND MODULES_SOURCE ${WEBP_MODULES_SOURCE})
list(APPEND MODULES_SOURCE ${WEBRTC_MODULES_SOURCE})
list(APPEND MODULES_SOURCE ${WEBSOCKET_MODULES_SOURCE})
list(APPEND MODULES_SOURCE ${WEBXR_MODULES_SOURCE})
list(APPEND MODULES_SOURCE ${XATLAS_UNWRAP_MODULES_SOURCE})
list(APPEND MODULES_SOURCE ${ZIP_UNWRAP_MODULES_SOURCE})



foreach(file ${MODULES_SOURCE})
    file(RELATIVE_PATH relative_path "${CMAKE_CURRENT_SOURCE_DIR}" "${file}")
    get_filename_component(dir_path "${relative_path}" DIRECTORY)
    string(REPLACE "/" "\\" vs_filter "${dir_path}")
    source_group("${vs_filter}" FILES "${file}")
endforeach()

godot_add_library(godot-modules modules STATIC ${MODULES_SOURCE})

target_include_directories(godot-modules PUBLIC 
${GODOT_ENGINE_ROOT_DIRECTORY} 
${GODOT_SOURCE_ROOT_PLATFORM_DIR}/windows
${GODOT_SOURCE_MODULES_DIR}
${GODOT_SOURCE_ROOT_THIRDPARTY_DIR}
${GODOT_SOURCE_ROOT_THIRDPARTY_DIR}/manifold/include
${GODOT_SOURCE_MODULES_DIR}/gdscript
${GODOT_SOURCE_ROOT_THIRDPARTY_DIR}/
)

target_link_libraries(godot-modules 
zlib
enet
zstd
ufbx
glslang
libogg
minimp3
libvorbis
libtheora
libktx
jpeg-compressor
rvo2
openxr
harfbuzz
icu4c
xatlas
embree
libwebp
pcre2
thorvg
miniupnpc
wslay
jolt_physics
etcpak
astcenc
cvtt
basis_universal
mbedtls
clipper2
freetype
msdfgen
recastnavigation
) 

